// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeltaPatcher should apply an initial delta correctly 1`] = `
Array [
  Object {
    "code": "pre",
  },
  Object {
    "code": "middle",
  },
  Object {
    "code": "post",
  },
]
`;

exports[`DeltaPatcher should apply many different patches correctly 1`] = `
Array [
  Object {
    "code": "pre",
  },
  Object {
    "code": "middle",
  },
  Object {
    "code": "another",
  },
  Object {
    "code": "third",
  },
  Object {
    "code": "post",
  },
]
`;

exports[`DeltaPatcher should apply many different patches correctly 2`] = `
Array [
  Object {
    "code": "new pre",
  },
  Object {
    "code": "third",
  },
  Object {
    "code": "twelve",
  },
  Object {
    "code": "post",
  },
]
`;

exports[`DeltaPatcher should apply many different patches correctly 3`] = `
Array [
  Object {
    "code": "1",
  },
  Object {
    "code": "ten",
  },
  Object {
    "code": "1",
  },
]
`;
